--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,31 @@
 * {
     font-family: 'Raleway', sans-serif;
 }
+.header-container { 
+    display: flex;
+    justify-content: space-between;
+    align-content: center;  
+}
+.Lienhebergement,.Activités
+{
+    display: flex;
+    flex: end;
+    margin-right: 20px;
+}
+.Lienhebergement:hover,.Activités:hover{
+    color: #0065FC;
+}
+.filtres-container {
+    border: 1px solid #000;
+    padding: 10px;
+    width: 300px;
+}
 
+.case {
+    border: 1px solid #ccc;
+    padding: 5px;
+    margin-bottom: 5px;
+}
 :root {
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
