--- a/css/style.css
+++ b/css/style.css
@@ -2,24 +2,85 @@
 * {
     font-family: 'Raleway', sans-serif;
 }
-.header-container { 
+
+.header-container {
     display: flex;
     justify-content: space-between;
-    align-content: center;  
+    margin-bottom: 40px;  
 }
-.Lienhebergement,.Activités
-{
+
+.header-container img {
+    width: 20%; 
+    height: auto; 
+    margin-right: 40px; 
+}
+.liens {
     display: flex;
-    flex: end;
-    margin-right: 20px;
+    gap: 100px;
 }
-.Lienhebergement:hover,.Activités:hover{
+.lien-Hébergement :hover {
+    border-top: 2px solid;
+    padding-top: 3px;
     color: #0065FC;
+
 }
-.filtres-container {
-    border: 1px solid #000;
+.lien-activites :hover{
+    border-top: 2px solid;
+    padding-top: 3px;
+color: #0065FC;
+}
+.location-container{
+    display: flex;
+    align-items: center;
+    border: none;
+    background-color: #ccc;
+    border-radius: 10px 0 0 10px;
+}
+.icon-size {
+    padding: 12px;
+}
+
+.search-bar {
     padding: 10px;
-    width: 300px;
+    height: 20px;
+    border: #F2F2F2;
+}
+.search-button{
+    display: flex;
+    align-items: center;
+     background-color: #0065FC;
+     font-size: 15px;
+     color: white;
+     border-radius: 0 10px 10px 0;
+     border: none;
+}
+
+.search-container {
+    display: flex;
+justify-content: flex-start;
+border: none;
+}
+
+
+.filtres-container {
+    display: flex;
+    align-items: center;
+    margin: 20px;
+}
+.box:hover {
+    background-color: #DEEBFF;
+}
+.circle-info{
+    margin: 30px;
+}
+
+.box {
+    margin: 10px;
+    border: 3px solid;
+    border-color: #F2F2F2;
+    border-radius: 40px;
+    padding: 15px;
+    font-size: 22px;
 }
 
 .case {
@@ -27,6 +88,8 @@
     padding: 5px;
     margin-bottom: 5px;
 }
+
+
 :root {
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
@@ -96,6 +159,30 @@ a {
 }
 
 /****** Hebergements ***********/
+.hebergements-cards img{
+    width: 100%;
+    height: 136px;
+    border-radius: 20px;
+
+}
+
+.hebergements-cards {
+   display: flex;
+    margin-top: 33px;  
+}
+
+.hebergements-cards .card-content {
+    width: 67%;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+.hebergements-cards .card-subtitle{
+    margin: 0px;
+
+}
 .hebergements {
     width: 65%;
 }
@@ -106,6 +193,7 @@ a {
 }
 
 .populaires-title {
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
