--- a/css/style.css
+++ b/css/style.css
@@ -6,36 +6,41 @@
 .header-container {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 40px;  
+    margin-bottom: 40px;
 }
 
 .header-container img {
-    width: 20%; 
-    height: auto; 
-    margin-right: 40px; 
+    width: 20%;
+    height: auto;
+    margin-right: 40px;
 }
+
 .liens {
     display: flex;
     gap: 100px;
 }
+
 .lien-Hébergement :hover {
     border-top: 2px solid;
     padding-top: 3px;
     color: #0065FC;
 
 }
-.lien-activites :hover{
+
+.lien-activites :hover {
     border-top: 2px solid;
     padding-top: 3px;
-color: #0065FC;
+    color: #0065FC;
 }
-.location-container{
+
+.location-container {
     display: flex;
     align-items: center;
     border: none;
     background-color: #ccc;
     border-radius: 10px 0 0 10px;
 }
+
 .icon-size {
     padding: 12px;
 }
@@ -45,42 +50,50 @@ color: #0065FC;
     height: 20px;
     border: #F2F2F2;
 }
-.search-button{
+
+.search-button {
     display: flex;
     align-items: center;
-     background-color: #0065FC;
-     font-size: 15px;
-     color: white;
-     border-radius: 0 10px 10px 0;
-     border: none;
+    background-color: #0065FC;
+    font-size: 15px;
+    color: white;
+    border-radius: 0 10px 10px 0;
+    border: none;
+    width: 110px;
+    padding-left: 15px;
 }
 
 .search-container {
     display: flex;
-justify-content: flex-start;
-border: none;
+    justify-content: flex-start;
+    border: none;
 }
 
 
 .filtres-container {
     display: flex;
-    align-items: center;
-    margin: 20px;
+    align-items: baseline;
+    margin-top: 20px;
 }
+
 .box:hover {
     background-color: #DEEBFF;
 }
-.circle-info{
-    margin: 30px;
+.circle-info-container{
+    margin: 40px 0;
+
+}
+.circle-info {
+    margin: 15px;
+    
 }
 
 .box {
-    margin: 10px;
+    margin-left: 10px;
     border: 3px solid;
     border-color: #F2F2F2;
     border-radius: 40px;
     padding: 15px;
-    font-size: 22px;
 }
 
 .case {
@@ -150,7 +163,9 @@ a {
     display: flex;
     justify-content: space-between;
 }
-
+.hebergements-cards-container{
+    width: 30%;
+}
 .hebergements-and-populaires section {
     background-color: var(--main-bg-color);
     border-radius: 20px;
@@ -159,7 +174,7 @@ a {
 }
 
 /****** Hebergements ***********/
-.hebergements-cards img{
+.hebergements-cards img {
     width: 100%;
     height: 136px;
     border-radius: 20px;
@@ -167,25 +182,40 @@ a {
 }
 
 .hebergements-cards {
-   display: flex;
-    margin-top: 33px;  
+    flex-direction: row;
+    flex-wrap: wrap;
+    display: flex;
+    margin-top: 33px;
+gap: 30px;
 }
 
 .hebergements-cards .card-content {
-    width: 67%;
+    width: 80%;
     padding-left: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     box-sizing: border-box;
 }
-.hebergements-cards .card-subtitle{
+
+.hebergements-cards .card-subtitle {
     margin: 0px;
 
 }
+
 .hebergements {
     width: 65%;
 }
+
+.footer-container{
+    display: flex;
+    justify-content: space-between;
+    background-color: #ccc;
+    margin-top: 100px;
+    padding-left: 30px;
+    padding-right: 300px;
+}
+
 
 /****** Populaires ***********/
 .populaires {
@@ -193,7 +223,7 @@ a {
 }
 
 .populaires-title {
-    
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -232,15 +262,53 @@ a {
 .populaires-cards .card-rating {
     margin-bottom: 5px;
 }
+.activites-title{
+    margin-top: 100px;
+    font-size: 22px;
+    margin-left: 25px;
+}
+.cards-activites{
+    background-color: white;
+    border-radius: 20px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+/*
+.cards-activites img{
+    border-radius: 20px;
+    width:250px;
+    height: 350px;
+    display: flex;
+}
+*/
+.activites-text{
+    margin-left: 20px;
+}
 
+.box-container{
+    display: flex;
+    flex-direction: row;
+}
+.nav-title{
+    font-size: 22px;
 
-
+}
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+
+
+    .filtres-container{
+        flex-direction: column;
+    }
+    .box-container{
+        flex-direction: row;
+    }
+    .box{
+        margin: 0;
+    }
     .hebergements-and-populaires {
         flex-direction: column;
     }
@@ -271,9 +339,68 @@ a {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+    .loisir-container{
+        display: flex;
+        gap: 15px;
+        justify-content: space-between;
+    }
+    .loisir-container a {
+        width: 20%;
+height: 100%;
+
+
+    }
+    .footer-container{
+        margin-right: 0%;
+        padding-right: 10%;
+    }
+
+    /*mettre des balise ahref pr faire diminuer la tailles pr les médias queries*/
+    .cards-activites{
+        
+    }
+    .cards-activites img{
+
+    }
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
     /* ... */
+    .header-container{
+
+        flex-direction: column;
+        align-items: center;
+    }
+    .logo{
+        width: 60%;
+        margin: 5% 0 5% 50%;
+
+    }
+    .section-title{
+        
+    }
+    .box-container{
+
+    }
+    .hebergements-and-populaires{
+        flex-direction: column-reverse;
+    }
+    .populaires-cards{
+        flex-direction: column;   
+}
+.populaires-cards a{
+    width: auto;
+}
+
+.hebergements{
+    background-color: #0065FC;
+}
+.hebergements-cards{
+    flex-direction: column;
+}
+
+.hebergements-cards a{
+    width: auto;
+}
 }
